k8s/my-ubuntu-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-ubuntu-app
spec:
  containers:
  - name: my-ubuntu-container
    image: ubuntu:latest
    command: ["sleep", "infinity"]
