k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-app
  labels:
    app: api-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      containers:
        - name: api-gateway-app
          image: saihemanth1997/api-gateway:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8765

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-app
spec:
  type: LoadBalancer
  selector:
    app: api-gateway-app
  ports:
    - port: 80
      targetPort: 8765
      protocol: TCP
