k8s/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-app
  labels:
    app: config-server-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server-app
  template:
    metadata:
      labels:
        app: config-server-app
    spec:
      containers:
        - name: config-server-app
          image: saihemanth1997/config-server:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9296

---
apiVersion: v1
kind: Service
metadata:
  name: config-server-app
spec:
  selector:
    app: config-server-app
  ports:
    - port: 80
      targetPort: 9296
