k8s/contribute-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contribute-service-app
  labels:
    app: contribute-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contribute-service-app
  template:
    metadata:
      labels:
        app: contribute-service-app
    spec:
      containers:
        - name: contribute-service-app
          image: saihemanth1997/contribute-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: contribute-service-app
spec:
  selector:
    app: contribute-service-app
  ports:
    - port: 80
      targetPort: 8082
