k8s/front-end.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  # namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: saihemanth1997/front-end
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "1Gi"   # Adjust memory request
              cpu: "500m"       # Adjust CPU request
            limits:
              memory: "2Gi"   # Adjust memory limit
              cpu: "1"    

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  # namespace: jenkins
spec:
  # type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
