k8s/quiz-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-service-app
  labels:
    app: quiz-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-service-app
  template:
    metadata:
      labels:
        app: quiz-service-app
    spec:
      containers:
        - name: quiz-service-app
          image: saihemanth1997/quiz-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-service-app
spec:
  selector:
    app: quiz-service-app
  ports:
    - port: 80
      targetPort: 8090
