k8s/service-registry.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka
  # namespace: jenkins
  labels:
    app: eureka
spec:
  clusterIP: None
  selector:
    app: eureka
  ports:
    - port: 8761
      name: eureka

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
  # namespace: jenkins
spec:
  selector:
    matchLabels:
      app: eureka
  serviceName: "eureka"
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: saihemanth1997/service-registry:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-lb
  # namespace: jenkins
  labels:
    app: eureka
spec:
  selector:
    app: eureka
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8761
